implement new DynamoDB strategy, separating current item from history records
